samples/_failures_safe/1761411697_0178bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8db3858.c: In function ‘main’:
./samples/SAFE/__tmp_c8db3858.c:137:17: error: expected expression at end of input
  137 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_c8db3858.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8db3858.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8db3858.c:137:17: error: expected declaration or statement at end of input
